--- a/Introduction_to_Neural_Networks.ipynb
+++ b/Introduction_to_Neural_Networks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdBHqg2zXhKXJ9W++lSi1L",
+      "authorship_tag": "ABX9TyO5qRo5pCIOLjE/mIJrAxGp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,7 +267,7 @@
             "_dom_classes": [],
             "_figure_label": "Figure 1",
             "_image_mode": "full",
-            "_message": "",
+            "_message": "x=−9.95 y=−8.77",
             "_model_module": "jupyter-matplotlib",
             "_model_module_version": "^0.11",
             "_model_name": "MPLCanvasModel",
@@ -481,9 +481,11 @@
         "#@markdown         - Sigmoid Function \n",
         "#@markdown         - Hyperbolic Tangent\n",
         "\n",
-        "\n",
         "!pip install mpl_interactions[jupyter] &> /dev/null\n",
         "!pip install \"ipywidgets>=7,<8\" &> /dev/null\n",
+        "!wget https://github.com/van-richard/Machine_Learning_Tutorials/raw/main/img.zip\n",
+        "!unzip img.zip\n",
+        "!rm -r sample_data img.zip\n",
         "\n",
         "from ipywidgets import interact, interactive, fixed, interact_manual\n",
         "import ipywidgets as widgets\n",
@@ -495,23 +497,10 @@
         "print(\"\\t Runtime > Restart Runtime\")"
       ],
       "metadata": {
-        "id": "2ZwiSvqNU8_i",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "766fe1ba-ce30-4a39-a6c3-0c5ab66a1620"
+        "id": "2ZwiSvqNU8_i"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Please restart kernal by:\n",
-            "\t Runtime > Restart Runtime\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -638,6 +627,22 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Graphically, this equation, y = 2x, can be shown as our neuron for NN:\n",
+        "<br>\n",
+        "\n",
+        "<p align=\"center\" width=\"100%\">\n",
+        "    <img width=\"75%\" src=\"img/y_mx.png\">\n",
+        "</p>\n",
+        "\n",
+        "If we include a value(s) of _b_, we get variations in the y-intersection."
+      ],
+      "metadata": {
+        "id": "IVjlky6R7GfP"
+      }
     },
     {
       "cell_type": "code",
